--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    vidarl_dummy.example:
 #        class: Vidarl\DummyBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+
+    vidarl_dummy.purge_client.dummyPurge:
+        class: Vidarl\DummyBundle\PurgeClient\DummyPurgeClient
+
