Added Twig operator hasPaid()

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -11,3 +11,9 @@ services:
         arguments: ["@ezpublish.api.repository"]
         tags:
             - { name: fos_http_cache.user_context_provider }
+
+    vidarl_dummy.twig.filter.has_paid:
+        class: Vidarl\DummyBundle\Twig\HasPaidExtension
+        arguments: ["@ezpublish.api.repository"]
+        tags:
+            - { name: twig.extension}
