--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     },
     "require": {
-    },
+        "twig/extensions": "^1.5"
+},
     "require-dev": {
         "phpunit/phpunit": "~4.7"
     },
