branch-alias test

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "extra": {
         "branch-alias": {
             "dev-tmp_ci_branch": "1.x-dev",
-            "dev-vcustomtag": "1.x-dev"
+            "dev-vcustomtag": "1.x-dev",
+            "dev-fastly": "1.x-dev"
         }
 	}
 }
